# mimic_baseline

./: .gitignore  readme.md
deploy_mujoco/: deploy_mujoco.py  math_func.py  motion_loader.py  plot_TV.py
general_motion_tracker_whole_body_teleoperation/: setup.py
general_motion_tracker_whole_body_teleoperation/docs/: CHANGELOG.rst
general_motion_tracker_whole_body_teleoperation/general_motion_tracker_whole_body_teleoperation/assets/Q1/: CMakeLists.txt  package.xml
general_motion_tracker_whole_body_teleoperation/general_motion_tracker_whole_body_teleoperation/assets/Q1/meshes/: L_ankle_pitch_link.STL  L_ankle_roll_link.STL  L_elbow_link.STL  L_forearm_yaw_link.STL  L_hip_roll_link.STL  L_hip_yaw_link.STL  L_knee_link.STL  L_shoulder_pitch_link.STL  L_shoulder_roll_link.STL  L_shoulder_yaw_link.STL  L_wrist_roll_link.STL  R_ankle_pitch_link.STL  R_ankle_roll_link.STL  R_elbow_link.STL  R_forearm_yaw_link.STL  R_hip_roll_link.STL  R_hip_yaw_link.STL  R_knee_link.STL  R_shoulder_pitch_link.STL  R_shoulder_roll_link.STL  R_shoulder_yaw_link.STL  R_wrist_roll_link.STL  head_pitch_link.STL  head_yaw_link.STL
general_motion_tracker_whole_body_teleoperation/general_motion_tracker_whole_body_teleoperation/assets/Q1/mjcf/: Q1.xml  Q1_wo_hand.xml  Q1_wo_hand_ankle_close_loop.xml
general_motion_tracker_whole_body_teleoperation/general_motion_tracker_whole_body_teleoperation/assets/Q1/urdf/: Q1_wo_hand.urdf  Q1_wo_hand_rl.urdf
scripts/: csv_to_npz.py  csvs_to_npzs.py  replay_npz.py  test_jit_.py
scripts/rsl_rl/: motion_file.yaml  play.py  train.py
(+19 files in other folders)
